# icon-ch-vzarr

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: virtualize_kendach1.ipynb
src/icon_ch_vzarr/: __init__.py  codec.py  parsers.py
